kuma/static/styles/minimalist/components/_login.scss
.auth-container {
    grid-area: L;
    display: flex;
    flex-direction: row;
    align-items: center;

    @media #{$mq-tablet-and-up} {
        justify-self: center;
    }

    .username {
        margin-left: 5px;

        @media #{$mq-tablet-and-up} {
            display: none;
        }
    }
    /* Buttons (in the dropdown labels) don't seem to inherit font sizes
        so we need to make this explicit. */
    button {
        font-size: 1rem;
    }

    .signout-button {
        /* Signing out is a POST operation so we use a form and button
           but we want the button to look like a regular link. */
        color: $link-color;
        padding: 0;
        border-width: 0;
    }

    .avatar {
        width: 40px;
        height: 40px;
        border-radius: 50%;
    }
}

.signin-link {
    display: flex;
    align-items: center;
    color: $text-color;
    font-size: 1rem;
    font-weight: bold;
    text-decoration: none;

    @media #{$mq-tablet-and-up} {
        justify-self: center;
        margin-left: 24px;
    }

    &:hover {
        text-decoration: none;
        background-color: $grey-light;
    }

    &:focus {
        /* Focus outline extends beyond header in Chrome without this */
        outline-offset: -3px;
    }
}

